# OpenGL-2D-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
assets/Shader/: Quads.frag  Quads.vert  Text.frag  Text.vert  TextureOnQuad.frag  TextureOnQuad.vert  Vertex2D.frag  Vertex2D.vert  triangolo.frag  triangolo.vert
src/: Main.cpp  cglph.h  oglph.h
src/Core/: Application.cpp  Application.h  Event.cpp  Event.h  Keycodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.h
src/Layers/: BatchRendererLayer.cpp  BatchRendererLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  TestLayer.cpp  TestLayer.h  TilesMapLayer.cpp  TilesMapLayer.h
src/Renderer/: Buffer.cpp  Buffer.h  Debug.h  Framebuffer.cpp  Framebuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
src/Scene/: Component.h  Entity.cpp  Entity.h
src/Scene/Component/: CameraComponent.cpp  CameraComponent.h  InputComponent.cpp  InputComponent.h  SpriteComponent.cpp  SpriteComponent.h
